fixed issue with tabs (prevent jumping on hover)

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,32 @@ body {
 .items-header {
 	position: relative;
 }
+
+
+/*tabs*/
+.nav-tabs {
+	border-bottom: none;
+}
+.nav-tabs>li {
+	float: none;
+	text-align: center;
+}
+.nav-tabs>li>a {
+	padding: 0;
+	margin: 0;
+	line-height: 40px;
+  border: none;
+  border-radius: 0;
+}
+.nav-tabs>li.active a,
+.nav-tabs>li.active a:focus,
+.nav-tabs>li.active a:hover {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+/* end tabs*/
+
 .show-all {
 	position: absolute;
 	top: 0;
@@ -65,6 +91,11 @@ body {
     float: right;
     position: relative;
   }
+
+	.nav-tabs>li {
+		float: left;
+	  width: 20%;
+	}
 	.item {
     width: 31.9%;	
 	  max-width: inherit;
